--- a/history.html
+++ b/history.html
@@ -61,10 +61,14 @@ body::before {
       font-size: 16px;
       border-radius: 40px;
       border: none;
-      background-color: #00aaff; /* Голубой цвет кнопок */
+      background-color: #323232; 
       color: white;
       cursor: pointer;
       transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #8c8c8c;
     }
   </style>
 </head>
