--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@ body::before {
   transition: visibility 0s, opacity 0.5s;
 }
 #overlay.win {
-  background-color: rgba(102, 255, 94, 0.5);
+  background-color: rgba(106, 255, 98, 0.5);
 }
 #overlay.loose {
   background-color: rgba(255, 75, 75, 0.5);
 }
 #overlay.draw {
-  background-color: rgba(0, 123, 255, 0.5);
+  background-color: rgba(55, 151, 255, 0.5);
 }
 #game {
   display: flex;
@@ -71,13 +71,13 @@ button {
   font-size: 12px;
   border-radius: 40px;
   border: none;
-  background-color: #00aaff; /* Голубой цвет кнопок */
-  color: white;
+  background-color: #323232; 
+  color: white; 
   cursor: pointer;
   transition: background-color 0.3s;
 }
 button:hover {
-  background-color: #5bd6ff; /* Более темный голубой при наведении */
+  background-color: #8c8c8c;
 }
 
 #result {
@@ -153,13 +153,13 @@ button:hover {
   font-size: 12x;
   border-radius: 40px;
   border: none;
-  background-color: #00aaff; /* Голубой цвет кнопок */
+  background-color: #323232;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 #history:hover {
-  background-color: #0099cc; /* Более темный голубой при наведении */
+  background-color: #8c8c8c; 
 }
 
 @media (max-width: 600px) {
