--- a/tasks.html
+++ b/tasks.html
@@ -19,20 +19,35 @@
     overflow-x: hidden; /* Отключить горизонтальную прокрутку */
     color: white;
     background: url('background.jpg') no-repeat center center fixed;
-  background-size: cover;
-}
+    background-size: cover;
+  }
 
-body::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  filter: blur(3px); /* Добавляем размытие */
-  z-index: -1; /* Помещаем псевдоэлемент под контент */
-}
+  body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    filter: blur(3px); /* Добавляем размытие */
+    z-index: -1; /* Помещаем псевдоэлемент под контент */
+  }
+
+  button {
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 12px;
+    border-radius: 40px;
+    border: none;
+    background-color: #323232; 
+    color: white; 
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  button:hover {
+    background-color: #8c8c8c;
+  }
 </style>
 <body>
   <h1>Coming later...</h1>
